# data-myr

./: .gitignore  .gitlint  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: python-package.yml
myr/: Cargo.toml  __init__.py  __main__.py  checker.py  myr.py  resolver.py
myr/src/: bin.rs  lib.rs
spec/: README.md  specification.md
spec/example/: README.md  metadata.json
src/: bin.rs  lib.rs
tests/: data.py  test_local_integration.py  test_resolver.py  test_validator.py
