[package]
name = "myr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmyr"
path = "src/lib.rs"

[[bin]]
name = "myr"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.102"
